clusters/home/apps/monitoring/goldilocks/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: goldilocks
  namespace: monitoring
  annotations:
    external-dns.kubernetes.io/hostname: "goldilocks.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-internal.layertwo.dev"
    layertwo.dev/publish: "internal"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`goldilocks.layertwo.dev`)
    kind: Rule
    services:
    - name: goldilocks-dashboard
      port: 80
